# PDPA-blur

./: .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  DockerFile  Dockerfile  pyproject.toml  requirements.txt
backend/app/: face.py  face_utils.py  main.py
backend/app/api/: routes.py  routes_faces.py  routes_jobs.py  routes_meta.py  routes_videos.py
backend/app/core/: config.py  jobs.py
backend/app/schemas/: face.py  job.py  jobs.py  video.py
backend/app/services/: face_service.py  video_service.py
backend/app/utils/: cleanup.py  files.py
frontend/: eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/composables/: useApi.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/stores/: useProcessingStore.ts
